<resources>
    <string name="app_name">Fish Ordering</string>
    <string name="version_name">1.0</string>
    <string name="app_whole_name">Fishta Ordering App v1.0</string>
    <string name="about">About</string>
    <string name="general_settings">GENERAL</string>
    <string name="restore_from_local_storage">Restore</string>
    <string name="back_up_to_local_storage">Back Up</string>
    <string name="back_up_and_restore">BACK UP AND RESTORE</string>
    <string name="store_name">Store Name</string>
    <string name="puregold_baliwag">Puregold Baliwag</string>
    <string name="device_settings">DEVICE SETTINGS</string>
    <string name="noitems">Good! Everything is clean here!</string>
    <string-array name="sampleItems">
        <item>Bangus | 20KGs</item>
        <item>Tambakon | 50KGs</item>
        <item>Galungong | 50KGs</item>
        <item>Hipon | 50KGs</item>
    </string-array>
</resources>