<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingBottom="5dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                app:cardCornerRadius="0dp">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/device_settings"
                          android:textSize="12sp"
                          android:paddingTop="10dp"
                          android:paddingBottom="0dp"
                          android:paddingLeft="16dp"
                          android:paddingRight="16dp"
                          android:textStyle="bold"
                          android:textColor="@color/orange_fishta_darker"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                app:cardCornerRadius="0dp">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_marginLeft="24dp"
                              android:layout_marginRight="24dp"
                >
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:paddingTop="24dp"
                                  android:paddingBottom="24dp"
                                  android:paddingLeft="10dp"
                                  android:orientation="vertical"
                                  android:id="@+id/txtServerNum"
                                  android:background="@drawable/bg_material_transparent"
                    >
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="Server Number"
                                  android:textSize="18sp"
                                  android:textColor="@color/gray_800"
                        />

                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text=" "
                                  android:id="@+id/lblServerNum"
                        />

                    </LinearLayout>

                    <View android:layout_width="wrap_content" android:layout_height="1dp" android:background="@color/gray_200"
                    />


                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:paddingTop="24dp"
                                  android:paddingBottom="24dp"
                                  android:paddingLeft="10dp"
                                  android:orientation="vertical"
                                  android:id="@+id/txtStoreName"
                                  android:background="@drawable/bg_material_transparent"
                    >
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/store_name"
                                  android:textSize="18sp"
                                  android:textColor="@color/gray_800"
                        />

                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/puregold_baliwag"
                                  android:id="@+id/lblStoreName"

                        />

                    </LinearLayout>

                </LinearLayout>



            </android.support.v7.widget.CardView>





            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="10dp"
                                                app:cardCornerRadius="0dp">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/back_up_and_restore"
                          android:textSize="12sp"
                          android:paddingTop="10dp"
                          android:paddingBottom="0dp"
                          android:paddingLeft="16dp"
                          android:paddingRight="16dp"
                          android:textStyle="bold"
                          android:textColor="@color/orange_fishta_darker"/>
            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                app:cardCornerRadius="0dp">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_marginLeft="24dp"
                              android:layout_marginRight="24dp"
                >
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:paddingTop="24dp"
                                  android:paddingBottom="24dp"
                                  android:paddingLeft="10dp"
                                  android:orientation="vertical"
                                  android:id="@+id/llBackup"
                                  android:background="@drawable/bg_material_transparent"
                    >
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/back_up_to_local_storage"
                                  android:textSize="18sp"
                                  android:textColor="@color/gray_800"
                        />

                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="Create Backup to Local Storage"
                        />


                    </LinearLayout>

                    <View android:layout_width="wrap_content" android:layout_height="1dp" android:background="@color/gray_200"
                    />

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:paddingTop="24dp"
                                  android:paddingBottom="24dp"
                                  android:paddingLeft="10dp"
                                  android:orientation="vertical"
                                  android:id="@+id/llRestore"
                                  android:background="@drawable/bg_material_transparent"
                    >
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/restore_from_local_storage"
                                  android:textSize="18sp"
                                  android:textColor="@color/gray_800"
                        />


                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="Restore Backup from Local Storage"
                        />



                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="10dp"
                                                app:cardCornerRadius="0dp">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/general_settings"
                          android:textSize="12sp"
                          android:paddingTop="10dp"
                          android:paddingBottom="0dp"
                          android:paddingLeft="16dp"
                          android:paddingRight="16dp"
                          android:textStyle="bold"
                          android:textColor="@color/orange_fishta_darker"/>
            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                app:cardCornerRadius="0dp">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_marginLeft="24dp"
                              android:layout_marginRight="24dp"
                >
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:paddingTop="24dp"
                                  android:paddingBottom="24dp"
                                  android:paddingLeft="10dp"
                                  android:id="@+id/txtAbout"
                                  android:background="@drawable/bg_material_transparent"
                                  android:orientation="vertical">

                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/about"
                                  android:textSize="18sp"
                                  android:textColor="@color/gray_800"
                        />
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/app_whole_name"
                                  android:id="@+id/lblAbout"
                        />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>





</LinearLayout>